Добавлена модель и EF

--- a/HomeBuh.Web/Views/Shared/_LoginPartial.cshtml
+++ b/HomeBuh.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using HomeBuh.Web.Models
+@using HomeBuh.Models
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
