--- a/HomeBuh.Web/Views/_ViewImports.cshtml
+++ b/HomeBuh.Web/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using HomeBuh.Web
-@using HomeBuh.Web.Models
-@using HomeBuh.Web.Models.AccountViewModels
-@using HomeBuh.Web.Models.ManageViewModels
+@using HomeBuh.Models
+@using HomeBuh.Models.AccountViewModels
+@using HomeBuh.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
