Добавлена таблица настроек и дата последнего изменения записи

--- a/HomeBuh.Web/Views/Entries/Index.cshtml
+++ b/HomeBuh.Web/Views/Entries/Index.cshtml
@@ -25,7 +25,7 @@
                     @Html.DisplayNameFor(model => model.Description)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Done)
+                    @Html.DisplayNameFor(model => model.DateLastUpdate)
                 </th>
             <th></th>
         </tr>
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Done)
+                @Html.DisplayFor(modelItem => item.DateLastUpdate)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
