Добавлено условие на дату запрета

--- a/HomeBuh.Web/Views/Entries/Index.cshtml
+++ b/HomeBuh.Web/Views/Entries/Index.cshtml
@@ -1,11 +1,12 @@
 @model IEnumerable<HomeBuh.Models.Entry>
 
+
 @{
     ViewData["Title"] = "Index";
 }
 
 <h2>Index</h2>
-
+<p>@ViewData["Message"]</p>
 <p>
     <a asp-action="Create">Create New</a>
 </p>
